--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,10 @@ x-base_service: &base_service
     ports:
       - "${WEBUI_PORT:-7860}:7860"
     volumes:
-      - &v1 ./data:/data
+      - &v1 /vat/backups/StableDiffusion/data:/data
       - &v2 ./output:/output
+      - ./models_on_nvme:/data/models/Stable-diffusion/nvme
+      - ./vae_on_nvme:/data/models/VAE/nvme
     stop_signal: SIGKILL
     tty: true
     deploy:
@@ -32,6 +34,19 @@ services:
     image: sd-auto:63
     environment:
       - CLI_ARGS=--allow-code --xformers --enable-insecure-extension-access --api
+
+  auto2:
+    <<: *automatic
+    profiles: ["auto"]
+    ports:
+      - "${WEBUI_PORT:-7870}:7860"
+    deploy:
+      resources:
+        reservations:
+          devices:
+              - driver: nvidia
+                device_ids: ['1']
+                capabilities: [compute, utility]
 
   auto-cpu:
     <<: *automatic
@@ -60,10 +75,23 @@ services:
     <<: *base_service
     profiles: ["comfy"]
     build: ./services/comfy/
-    image: sd-comfy:4
+    image: sd-comfy:5
+    ports:
+      - "${WEBUI_PORT:-7861}:7860"
     environment:
       - CLI_ARGS=--preview-method=taesd
 
+  comfy2:
+    <<: *comfy
+    ports:
+      - "${WEBUI_PORT:-7862}:7860"
+    deploy:
+      resources:
+        reservations:
+          devices:
+              - driver: nvidia
+                device_ids: ['1']
+                capabilities: [compute, utility]
 
   comfy-cpu:
     <<: *comfy
