--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ x-base_service: &base_service
       - ./models_on_nvme:/data/models/Stable-diffusion/nvme
       - /media/slu/SN850X/SD:/data/models/Stable-diffusion/nvme2
       - /media/slu/SN750/SD:/data/models/Stable-diffusion/nvme3
+      - /media/slu/Solidigm/SD:/data/models/Stable-diffusion/nvme4
       - ./vae_on_nvme:/data/models/VAE/nvme
     stop_signal: SIGKILL
     tty: true
