- old bugs fixed - new bugs added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,11 @@ x-base_service: &base_service
     ports:
       - "${WEBUI_PORT:-7860}:7860"
     volumes:
-      - &v1 /vat/backups/StableDiffusion/data:/data
+      - &v1 /media/slu/New Volume/from-vat:/data
       - &v2 ./output:/output
-      - ./models_on_nvme:/data/models/Stable-diffusion/nvme
-      - /media/slu/SN850X/SD:/data/models/Stable-diffusion/nvme2
-      - /media/slu/SN750/SD:/data/models/Stable-diffusion/nvme3
-      - /media/slu/Solidigm/SD:/data/models/Stable-diffusion/nvme4
-      - ./vae_on_nvme:/data/models/VAE/nvme
-      - /media/slu/SN850X/SD_Lora:/data/models/Lora/sn850x
+      - /media/slu/New Volume/from-slash/models_on_nvme:/data/models/Stable-diffusion/nvme
+      - /media/slu/New Volume/from-sn850x/SD:/data/models/Stable-diffusion/nvme-sn850x
+      - /media/slu/New Volume/from-solidigm/SD:/data/models/Stable-diffusion/nvme-solidigm
     stop_signal: SIGKILL
     tty: true
     deploy:
