--- a/services/comfy/Dockerfile
+++ b/services/comfy/Dockerfile
@@ -1,8 +1,4 @@
-FROM alpine:3.17 as xformers
-RUN apk add --no-cache aria2
-RUN aria2c -x 5 --dir / --out wheel.whl 'https://github.com/AbdBarho/stable-diffusion-webui-docker/releases/download/6.0.0/xformers-0.0.21.dev544-cp310-cp310-manylinux2014_x86_64-pytorch201.whl'
-
-FROM pytorch/pytorch:2.0.1-cuda11.7-cudnn8-runtime
+FROM pytorch/pytorch:2.1.2-cuda12.1-cudnn8-runtime
 
 ENV DEBIAN_FRONTEND=noninteractive PIP_PREFER_BINARY=1
 
@@ -19,6 +15,7 @@ RUN --mount=type=cache,target=/root/.cache/pip \
   git checkout master && \
   echo git hash: $(git rev-parse HEAD) && \
   # git reset --hard 3e0033e && \
+  # upstream has... # git reset --hard d1f3637a5a944d0607b899babd8ff11d87100503 && \
   pip install -r requirements.txt
 
 WORKDIR ${ROOT}
@@ -34,12 +31,9 @@ ADD https://github.com/madebyollin/taesd/raw/main/taesdxl_decoder.pth \
 
 # add info
 COPY . /docker/
-RUN cp /docker/extra_model_paths.yaml ${ROOT}
-RUN chmod u+x /docker/entrypoint.sh
-RUN cp /docker/extra_model_paths.yaml ${ROOT}
+RUN chmod u+x /docker/entrypoint.sh && cp /docker/extra_model_paths.yaml ${ROOT}
 
-ENV NVIDIA_VISIBLE_DEVICES=all
-ENV PYTHONPATH="${PYTHONPATH}:${PWD}" CLI_ARGS=""
+ENV NVIDIA_VISIBLE_DEVICES=all PYTHONPATH="${PYTHONPATH}:${PWD}" CLI_ARGS=""
 EXPOSE 7860
 ENTRYPOINT ["/docker/entrypoint.sh"]
 CMD python -u main.py --listen --port 7860 ${CLI_ARGS}
