--- a/services/comfy/Dockerfile
+++ b/services/comfy/Dockerfile
@@ -29,6 +29,9 @@ ADD https://github.com/madebyollin/taesd/raw/main/taesdxl_decoder.pth \
 COPY . /docker/
 RUN chmod u+x /docker/entrypoint.sh && cp /docker/extra_model_paths.yaml ${ROOT}
 
+# fix dumb stuff done by ... not sure what. but it affects VHS video export node.
+RUN rm /opt/conda/bin/ffmpeg && ln -s /bin/ffmpeg /opt/conda/bin/ffmpeg
+
 ENV NVIDIA_VISIBLE_DEVICES=all PYTHONPATH="${PYTHONPATH}:${PWD}" CLI_ARGS=""
 EXPOSE 7860
 ENTRYPOINT ["/docker/entrypoint.sh"]
