i think i did finally get the cache bust working so build flag for docker compose up should do a proper update.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,8 +99,11 @@ services:
   comfy: &comfy
     <<: *base_service
     profiles: ["comfy"]
-    build: ./services/comfy/
-    image: sd-comfy:6
+    build:
+      context: ./services/comfy/
+      args:
+        CACHEBUST: "$(date)"
+    image: sd-comfy:13
     ports:
       - "${WEBUI_PORT:-7861}:7860"
     environment:
